--- a/package.json
+++ b/package.json
@@ -13,16 +13,28 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.4",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.0-alpha.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -30,8 +42,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
