Completed onboarding page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@screens/*":["./src/app/screens/*"],
+      "@images/*":["./public/assets/*"],
+      "@components/*":["./src/app/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/Carousel.jsx"],
